import "Exception.proto";
 
option java_outer_classname="ManagementResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message ManagementResponse {

	optional int64 requestId = 1;	
	optional Exception exception = 2;
	optional int32 version = 3;
	optional bytes returnVal = 4;	
	optional string methodName = 5;

}
